--- a/templates/event_register.html
+++ b/templates/event_register.html
@@ -1,25 +1,59 @@
-<h2>Register for: {{ event.title }}</h2>
+{% load static %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>student_dashboard</title>
+    <link rel="stylesheet" href="{% static 'styles/style.css' %}">
 
+</head>
+<body>
+<header>
+        <div class="navbar">
+            <div class="nav_logo">
+                <h2>SRMCEM Events Portal</h2>
+            </div>
+
+            <div class="nav_home">
+                <a href="{% url 'home' %}">Home</a>
+            </div>
+
+            <div class="username">
+            Hello,  {{user.first_name}}</div>
+
+            <div class="nav_logout">
+                <a href="{% url 'logout' %}">Logout</a>
+            </div>
+
+        </div>
+    </header>
+
+<h2 id="reg_event_name">Register for: {{ event.title }}</h2>
+
+<div class="event_reg">
 <form method="POST">
     {% csrf_token %}
 
-    <label>Name:</label>
+    <label>Name</label>
     {{ form.name }}
 
-    <label>Roll Number:</label>
+    <label>Roll Number</label>
     {{ form.roll_number }}
 
-    <label>Course:</label>
+    <label>Course</label>
     {{ form.course }}
 
-    <label>Branch:</label>
+    <label>Branch</label>
     {{ form.branch }}
 
-    <label>Contact Number:</label>
+    <label>Contact Number</label>
     {{ form.contact_number }}
 
-    <label>Email:</label>
+    <label>Email</label>
     {{ form.email }}
 
     <button type="submit">Submit Registration</button>
-</form>
+</form></div>
+<body>
+    <html>
